EDELIVERY-985 - WSDL updated, WS plugin adapted to the new interface, core entity-XML classes discerned from XML stubs classes